* gc.c: Delete excess semicolon after RUBY_ALIAS_FUNCTION().   Suppress "syntax error:  empty declaration" warnings by   Oracle Solaris Studio 12.x on Solaris. [Bug #11821]

* hash.c: ditto, after NOINSERT_UPDATE_CALLBACK().


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@53129 b2dd03c8-39d4-4d8f-98ff-823fe69b080e